# steganography

./: .gitignore  CMakeLists.txt  README.md  dib_headers.h  image_writer.cpp  image_writer.h  info_grabber.cpp  info_grabber.h  main.cpp  read_picture.cpp  read_picture.h
